- Added license header where needed. - Removed an obsolete java file. - Added some more fixes to get the DOMS to accept the shard objects.